work1/pod_nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-project-01
  labels:
    component: web-11
spec:
  containers:
    - name: nginx-app1
      image: nginx
      ports:
      - containerPort: 80
      volumeMounts:
      - name: my-project-01
        mountPath: "/etc/nginx/nginx.conf"
        subPath: nginx.conf
  volumes:
    - name: my-project-01
      configMap:
        name: my-project-01
