work1/service_nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-project-01
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    component: web-11
